--- a/book-store/package.json
+++ b/book-store/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.5",
     "next": "14.0.4",
     "next-fonts": "^1.5.1",
     "react": "^18",
