--- a/book-store/package.json
+++ b/book-store/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
+    "@types/redux-persist": "^4.3.1",
     "axios": "^1.6.5",
     "next": "14.0.4",
     "next-fonts": "^1.5.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.1.0",
+    "redux-persist": "^6.0.0",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
