--- a/book-store/package.json
+++ b/book-store/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^14.1.0",
     "@reduxjs/toolkit": "^2.0.1",
     "@types/redux-persist": "^4.3.1",
     "axios": "^1.6.5",
